compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_spread-3.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 186
expression: "\ntype Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  let Triple(the_a, c: the_c, ..) = triple\n  the_c\n}\n"
---
-module(the_app).
-compile(no_auto_import).

-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
    {triple, The_a, _@1, The_c} = Triple,
    The_c.

