compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_spread-4.snap
---
source: compiler-core/src/erlang/tests/records.rs
expression: "\ntype Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\nfn main() {\n  let triple = Triple(1,2,3)\n  case triple {\n    Triple(b: the_b, ..) -> the_b\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
    case Triple of
        {triple, _@1, The_b, _@2} ->
            The_b
    end.

