compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__records__record_updates-2.snap
---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 233
expression: "\npub type Person { Person(name: String, age: Int) }\n\nfn main() {\n    let p = Person(\"Quinn\", 27)\n    let new_p = Person(..p, age: p.age + 1)\n    new_p\n}\n"
---
-module(the_app).
-compile(no_auto_import).

-export_type([person/0]).

-type person() :: {person, binary(), integer()}.

-spec main() -> person().
main() ->
    P = {person, <<"Quinn"/utf8>>, 27},
    New_p = erlang:setelement(3, P, erlang:element(3, P) + 1),
    New_p.

